Switched back to JAudioTagger, thus switched back to Java 1.8 - with necessary fixes and some refactorings. Fixed playlist jumping on play with search text entered.